--- a/views/Reports.ejs
+++ b/views/Reports.ejs
@@ -76,7 +76,7 @@
             <% } %>
         <a href="/Log-out">Logout</a>
     </div>
-    <h1>All Devices</h1>
+    <h3>Send Mail To the Admin For Faulty product</h3>
     <table>
         <tr>
             <th>Name</th>
