--- a/views/myDevices.ejs
+++ b/views/myDevices.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Product List</title>
+    <title>order List</title>
     <style>
         body {
             display: flex;
@@ -70,11 +70,18 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/">Home</a>
         <% if (user.Roll === 'Admin') { %>
-        <a href="/ListProdAd">Back to Products</a>
+            <a href="/profile">Profile</a>
+        <% } else if (user.Roll === 'Student') { %>
+            <a href="/profile-cos">Profile</a> 
         <% } else { %>
-        <a href="/ListProd">Back to Products</a>
+            <a href="/Profile-Service1">Profile</a> 
+        <% } %>
+        
+        <% if (user.Roll === 'Admin') { %>
+        <a href="/ListProdAd">Back to orders</a>
+        <% } else { %>
+        <a href="/ListProd">Back to orders</a>
         <% } %>
         <a href="/Log-out">Logout</a>
     </div>
@@ -82,23 +89,23 @@
     <table>
         <tr>
             <th>ID</th>
-            <th>Name</th>
+            <th>name</th>
             <th>Amount</th>
             <th>Picked Date</th>
             <th>Return Back Date</th>
             <th>Action</th>
         </tr>
-        <% products.forEach(function(product) { %>
-            <tr>
-                <td><%= product.Id %></td>
-                <td><%= product.Name %></td>
-                <td><%= product.Amount %></td>
-                <td><%= product.startDate ? product.startDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
-                <td><%= product.endDate ? product.endDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
+        <% orders.forEach(function(order) { %>
+            <tr style="background-color:<%= (order.endDate && order.endDate <= new Date()) ? 'rgba(255, 0, 0, 0.2)' : '' %>;">
+                <td><%= order.product_id %></td>
+                <td><%= order.product_name %></td>
+                <td><%= order.amount %></td>
+                <td><%= order.startDate ? order.startDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
+                <td ><%= order.endDate ? order.endDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
 
                 <td>
                     <form action="/Release" method="POST">
-                        <input type="hidden" name="productId" value="<%= product.Id %>">
+                        <input type="hidden" name="productId" value="<%= order.product_id %>">
                         <input type="submit" value="Return Back">
                     </form>
                 </td>
