--- a/views/myDevices.ejs
+++ b/views/myDevices.ejs
@@ -79,9 +79,9 @@
         <% } %>
         
         <% if (user.Roll === 'Admin') { %>
-        <a href="/ListProdAd">Back to orders</a>
+        <a href="/ListProdAd">Back to Products</a>
         <% } else { %>
-        <a href="/ListProd">Back to orders</a>
+        <a href="/ListProd">Back to Products</a>
         <% } %>
         <a href="/Log-out">Logout</a>
     </div>
