--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -4,6 +4,11 @@
     <title>Order List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
+        body {
+            font-size: 16px;
+            background-image: url("images/r.png");
+            background-size: cover;
+        }
         .pending-table {
             background-color: #f5f5f5;
         }
