--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -66,6 +66,8 @@
 
         </div>
         <br>
+        <a href="Reports" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Reports</a>
+        <br>
         </div>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
 
@@ -94,6 +96,7 @@
 
         <div class="w3-container" style="margin-top:80px" id="Opening Hours">
 
+            <h1 class="w3-xxxlarge w3-text-red"><b>Welcome : <%= user.FirstName  %></b></h1> 
             <h1 class="w3-xxxlarge w3-text-red"><b>Opening Hours.</b></h1>
             <hr style="width:50px;border:5px solid #2f990f" class="w3-round">
 
