--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -65,7 +65,7 @@
         <br>
         <a href="myDevices" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">My devices</a>
         <br>
-        <a href="Reports" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Report</a>
+        <a href="AddReport.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Add Report</a>
         <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
@@ -90,6 +90,7 @@
 
         <div class="w3-container" style="margin-top:80px" id="Opening Hours">
 
+            <h1 class="w3-xxxlarge w3-text-red"><b>Welcome : <%= user.FirstName  %></b></h1>
             <h1 class="w3-xxxlarge w3-text-red"><b>Opening Hours For Admins</b></h1>
             <hr style="width:50px;border:5px solid #2f990f" class="w3-round">
 
