--- a/views/ListProdAd.ejs
+++ b/views/ListProdAd.ejs
@@ -90,7 +90,7 @@
                 <td>
                     <form action="/Pick" method="POST">
                         <input type="hidden" name="productId" value="<%= product.Id %>">
-                        <input type="submit" value="Broken">
+                        <input type="submit" value="Broken Device">
                     </form>
                     <form action="/Delete" method="POST">
                         <input type="hidden" name="productId" value="<%= product.Id %>">
