--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -84,7 +84,7 @@
         <br>
         <a href="/mydevices" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">My devices</a>
         <br>
-        <a href="AddReport.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Add Report</a>
+        <a href="AddReport.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Add Broken Device</a>
         <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
