--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -65,7 +65,7 @@
         <br>
         <a href="myDevices" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">My devices</a>
         <br>
-        <a href="AddReport.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Add Report</a>
+        <a href="AddReport.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Add Broken Device</a>
         <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
