--- a/views/Reports.ejs
+++ b/views/Reports.ejs
@@ -79,9 +79,9 @@
     </div>
     <table>
         <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Problem</th>
+            <th>Product Id</th>
+            <th>Product Name</th>
+            <th>Product Problem</th>
             
         </tr>
         <% reports.forEach(function(report) { %>
