Design All The Pages

--- a/views/Addproduct.html
+++ b/views/Addproduct.html
@@ -30,7 +30,7 @@
 
     /* This class is applied to the containing div <div class="nav"> and is used to set the background color and height of the navbar */
     .nav {
-      background: #000;
+      background: #f50404;
       height: 60px; /* set same as height & line-height below */
     }
 
@@ -45,13 +45,13 @@
 
     /* :hover allows you change the background color of the nav items when you mouse over them. Play around with the transition value to change the speed of the hover transition. */
     .nav li:hover {
-      background: red;
+      background: rgb(239, 238, 238);
       transition: background 0.3s;
     }
 
     /* This rule is applied to the link <a> tag. It lets you turn off the link underline and set the link text color. */
     .nav-link {
-      color: #fff;
+      color: #0d0c0c;
       text-decoration: none;
     }
   </style>
@@ -60,10 +60,6 @@
     <div class="nav">
       <ul>
         <li><a href="profile" class="nav-link">Profile</a></li>
-        <li>
-          <a href="policy.html" class="nav-link"><em>Policy</em></a>
-        </li>
-        <li><a href="policyprod.html" class="nav-link">policy Products</a></li>
         <li><a href="ListProdAd" class="nav-link">List Products</a></li>
         <li><a href="Log-in.html" class="nav-link">Log Out</a></li>
       </ul>
