--- a/views/AddReport.html
+++ b/views/AddReport.html
@@ -9,7 +9,7 @@
       defer
       src="https://use.fontawesome.com/releases/v6.2.1/js/all.js"
     ></script>
-    <title>Add Product</title>
+    <title>Add Report</title>
   </head>
   <style>
     html,
@@ -30,7 +30,7 @@
 
     /* This class is applied to the containing div <div class="nav"> and is used to set the background color and height of the navbar */
     .nav {
-      background: #000;
+      background: #f50505;
       height: 60px; /* set same as height & line-height below */
     }
 
@@ -54,17 +54,15 @@
       color: #fff;
       text-decoration: none;
     }
+
+    
   </style>
 
   <body>
     <div class="nav">
       <ul>
         <li><a href="profile" class="nav-link">Profile</a></li>
-        <li>
-          <a href="policy.html" class="nav-link"><em>Policy</em></a>
-        </li>
-        <li><a href="policyprod.html" class="nav-link">policy Products</a></li>
-        <li><a href="ListProdAd" class="nav-link">List Products</a></li>
+        <li><a href="ListProd" class="nav-link">List Products</a></li>
         <li><a href="Log-in.html" class="nav-link">Log Out</a></li>
       </ul>
     </div>
@@ -76,9 +74,7 @@
         <input name="product_id" type="number" placeholder="Id" />
         <!---<input name="Name" type="text" placeholder="Name"  />-->
         <input name="product_name" type="text" list="options" placeholder="Name" />
-        <input name="problem" type="text" placeholder="Write Here" />
-       
-
+        <input name="problem" type="text" placeholder="Write Here" style="width: 320px; height: 100px;" />
         <button type="submit">Add</button>
       </form>
     </div>
