--- a/views/ListProd.ejs
+++ b/views/ListProd.ejs
@@ -5,23 +5,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #f30c0c;
             background-image: url("images/r.png");
             background-size: cover;
         }
 
         .navbar {
-            background-color: #343a40;
-            padding: 10px;
+            padding: 5px;
             display: flex;
-            justify-content: space-between; /* Aligns items to the start and end of the navbar */
+            justify-content: center; /* Updated: Center the navbar links */
         }
 
         .navbar a {
             text-decoration: none;
-            color: #fff;
+            color: #000000 !important;
             font-weight: bold;
             transition: color 0.3s ease;
+            margin: 0 10px; /* Added: Create spacing between the navbar links */
         }
 
         .navbar a:hover {
@@ -32,14 +32,12 @@
             margin-top: 20px;
         }
 
-        .product-table {
-            background-color: #fff;
-        }
-
         .product-table th {
-            background-color: #343a40;
+            background-color: #344038;
             color: #fff;
             font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
         }
 
         .product-table td {
@@ -64,23 +62,55 @@
             display: flex;
             gap: 10px;
         }
-        .navbar a {
-            color: white;
-        }
+
         .navbar a.logout {
             margin-left: auto;
+        }
+
+        .page-title {
+            text-align: center;
+            font-size: 36px;
+            margin-top: 40px;
+        }
+
+        .product-table {
+            margin-top: 20px;
+        }
+
+        .product-table th,
+        .product-table td {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .amount-input {
+            width: 120px;
+        }
+
+        .date-input {
+            width: 180px;
+        }
+
+        .product-name {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        .available-amount {
+            font-size: 18px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Warehouse</a>
+        <a class="navbar-brand" href="/profile" style="color: red !important; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);font-weight: bold !important; font-size: 30px !important; ">Warehouse</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto"> <!-- Updated: Move the navbar links to the right -->
                 <li class="nav-item">
                     <a class="nav-link" href="/profile">Profile</a>
                 </li>
@@ -98,8 +128,6 @@
                       <a class="nav-link" href="/ListProdAd">Products</a>
                   </li>
                 <% } %>
-            </ul>
-            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link logout" href="/Log-out">Logout</a>
                 </li>
@@ -108,37 +136,37 @@
     </nav>
 
     <div class="container">
-      <h1>Available Products</h1>
-      <table class="table table-striped table-bordered product-table">
-          <thead class="thead-dark">
-              <tr>
-                  <th>Name</th>
-                  <th>Available</th>
-                  <th>Action</th>
-              </tr>
-          </thead>
-          <tbody>
-              <% products.forEach(function(product) { %>
-              <tr>
-                  <td><%= product.Name %></td>
-                  <td><%= product.availableAmount %> / <%= product.totalAmount %></td>
-                  <td>
-                      <form action="/Pick" method="POST">
-                          <input type="hidden" name="productId" value="<%= product.Id %>">
-                          <div class="input-group">
-                              <input type="datetime-local" id="datetime-<%= product.Id %>" name="datetime-<%= product.Id %>" class="form-control">
-                              <input type="number" id="amount-<%= product.Id %>" name="amount-<%= product.Id %>" min="0" max="<%= product.availableAmount %>" class="form-control">
-                              <div class="input-group-append">
-                                  <button type="submit" id="pick-button-<%= product.Id %>" class="btn btn-primary">Pick</button>
-                              </div>
-                          </div>
-                      </form>
-                  </td>
-              </tr>
-              <% }); %>
-          </tbody>
-      </table>
-  </div>
-  
+        <h1 class="page-title">Available Products</h1>
+        <table class="table table-striped table-bordered product-table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Name</th>
+                    <th>Available</th>
+                    <th style="width: 200px;">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% products.forEach(function(product) { %>
+                <tr>
+                    <td class="product-name"><%= product.Name %></td>
+                    <td class="available-amount"><%= product.availableAmount %> / <%= product.totalAmount %></td>
+                    <td>
+                        <form action="/Pick" method="POST">
+                            <input type="hidden" name="productId" value="<%= product.Id %>">
+                            <div class="input-container">
+                                <input type="datetime-local" id="datetime-<%= product.Id %>" name="datetime-<%= product.Id %>" class="form-control date-input">
+                                <input type="number" id="amount-<%= product.Id %>" name="amount-<%= product.Id %>" min="0" max="<%= product.availableAmount %>" class="form-control amount-input">
+                                <div class="input-group-append">
+                                    <button type="submit" id="pick-button-<%= product.Id %>" class="btn btn-primary pick-button">Pick</button>
+                                </div>
+                            </div>
+                        </form>
+                    </td>
+                </tr>
+                <% }); %>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
