--- a/views/ListProdAd.ejs
+++ b/views/ListProdAd.ejs
@@ -36,8 +36,10 @@
 
         .navbar {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
             margin-top: 20px;
+            width: 80%;
         }
 
         .navbar a {
@@ -66,18 +68,63 @@
         input[type="submit"]:hover {
             background-color: #45a049;
         }
+
+
+        .product-table {
+            width: 70%;
+        }
+
+        .product-table th {
+            background-color: #344038;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .product-table td {
+            padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .pick-button {
+            background-color: #0a8435;
+            color: #fff;
+            border: none;
+            padding: 6px 12px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .pick-button:hover {
+            background-color: #0da323;
+        }
+        .product-name {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        .available-amount {
+            font-size: 18px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="/profile">Profile</a>
-        <a href="/mydevices">My Devices</a>
-        <a href="/orders">Orders</a>
-        <a href="/Addproduct.html">Add Product</a>
-        <a href="/Log-out">Logout</a>
+        <a class="navbar-brand" href="/profile" style="color: red !important; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);font-weight: bold !important; font-size: 30px !important; ">Warehouse</a>
+        <div>
+            <a href="/profile">Profile</a>
+            <a href="/mydevices">My Devices</a>
+            <a href="/orders">Orders</a>
+            <a href="/Addproduct.html">Add Product</a>
+            <a href="/Log-out">Logout</a>
+        </div>
     </div>
     <h1>All Devices</h1>
-    <table>
+    <table class="product-table">
         <tr>
             <th>Name</th>
             <th>Available</th>
@@ -85,12 +132,12 @@
         </tr>
         <% products.forEach(function(product) { %>
             <tr>
-                <td><%= product.Name %></td>
-                <td><%= product.availableAmount %> / <%= product.totalAmount %></td>
+                <td class="product-name"><%= product.Name %></td>
+                <td class="available-amount"><%= product.availableAmount %> / <%= product.totalAmount %></td>
                 <td>
                     <form action="/Pick" method="POST">
                         <input type="hidden" name="productId" value="<%= product.Id %>">
-                        <input type="submit" value="Broken Device">
+                        <input type="submit" value="Broken Device" class="pick-button">
                     </form>
                     <form action="/Delete" method="POST">
                         <input type="hidden" name="productId" value="<%= product.Id %>">
@@ -101,6 +148,6 @@
             
         <% }); %>
     </table>
-    <h3> Count Of Availbe products : <%= count %> </h3>
+    <h3> Count Of Available products: <%= count %> </h3>
 </body>
 </html>
