--- a/views/Log-in.css
+++ b/views/Log-in.css
@@ -1,5 +1,5 @@
 body {
-  background: url("") no-repeat fixed center center;
+  background-image: url("images/r.png");
   background-size: cover;
   font-family: Montserrat;
   margin: 0;
@@ -12,9 +12,6 @@ body {
 .login-block {
   width: 320px;
   padding: 100px;
-  background: #fff;
-  border-radius: 10px;
-  border-top: 5px solid rgb(255, 74, 34);
   margin: 0 auto;
 }
 
@@ -48,6 +45,7 @@ body {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: blue;
   }
   .navlinks ul {
     width: 100%;
@@ -58,6 +56,8 @@ body {
   }
   .navlinks ul li a {
     padding: 0.8rem 1.5rem;
+    color: #ffffff; /* Add your desired text color */
+    text-decoration: none;
   }
   .navlinks.active {
     display: flex;
@@ -131,28 +131,30 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(255, 74, 34);
+  background-color: rgb(230, 7, 7);
   color: black;
   margin: 0 0 100px 0;
 }
 
 .navlinks ul {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .navlinks ul li {
-  list-style: none;
+  display: inline-block;
 }
 
 .navlinks ul li a {
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
   padding: 1rem;
-  display: block;
+  display: inline-block;
+  transition: color 0.3s ease;
 }
 
 .navlinks ul li a:hover {
-  background-color: #555;
+  color: #ffffff; /* Change to the desired color on hover */
+  background-color: rgb(198, 15, 15); /* Change to the desired background color on hover */
 }
