--- a/views/Reports.ejs
+++ b/views/Reports.ejs
@@ -12,10 +12,6 @@
             background-image: url("images/r.png");
             background-size: cover;
         }
-        
-            
-        
-
         h1 {
             text-align: center;
             margin-top: 20px;
@@ -40,8 +36,10 @@
 
         .navbar {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
             margin-top: 20px;
+            width: 80%;
         }
 
         .navbar a {
@@ -70,14 +68,35 @@
         input[type="submit"]:hover {
             background-color: #45a049;
         }
+
+        .product-table {
+            width: 70%;
+        }
+
+        .product-table th {
+            background-color: #344038;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .product-table td {
+            padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+        }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="/profile">Profile</a>
-        <a href="/Log-out">Logout</a>
+        <a class="navbar-brand" href="/profile" style="color: red !important; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);font-weight: bold !important; font-size: 30px !important; ">Warehouse</a>
+        <div>
+            <a href="/profile">Profile</a>
+            <a href="/Log-out">Logout</a>
+        </div>
     </div>
-    <table>
+    <table class ="product-table">
         <tr>
             <th>Product Id</th>
             <th>Product Name</th>
