--- a/views/myDevices.ejs
+++ b/views/myDevices.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>order List</title>
+    <title>Order List</title>
     <style>
         body {
             display: flex;
@@ -26,7 +26,7 @@
 
         th, td {
             padding: 12px;
-            text-align: left;
+            text-align: center;
             border-bottom: 1px solid #ddd;
         }
 
@@ -36,8 +36,10 @@
 
         .navbar {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
             margin-top: 20px;
+            width: 80%;
         }
 
         .navbar a {
@@ -66,30 +68,65 @@
         input[type="submit"]:hover {
             background-color: #45a049;
         }
+
+        .product-table {
+            width: 80%;
+        }
+
+        .product-table th {
+            background-color: #344038;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .product-table td {
+            padding: 12px;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .return-button {
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            padding: 6px 12px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .return-button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <% if (user.Roll === 'Admin') { %>
-            <a href="/profile">Profile</a>
-        <% } else if (user.Roll === 'Student') { %>
-            <a href="/profile-cos">Profile</a> 
-        <% } else { %>
-            <a href="/Profile-Service1">Profile</a> 
-        <% } %>
-        
-        <% if (user.Roll === 'Admin') { %>
-        <a href="/ListProdAd">Back to Products</a>
-        <% } else { %>
-        <a href="/ListProd">Back to Products</a>
-        <% } %>
-        <a href="/Log-out">Logout</a>
+        <a class="navbar-brand" href="/profile" style="color: red !important; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);font-weight: bold !important; font-size: 30px !important; ">Warehouse</a>
+        <div>
+            <% if (user.Roll === 'Admin') { %>
+                <a href="/profile">Profile</a>
+            <% } else if (user.Roll === 'Student') { %>
+                <a href="/profile-cos">Profile</a> 
+            <% } else { %>
+                <a href="/Profile-Service1">Profile</a> 
+            <% } %>
+            
+            <% if (user.Roll === 'Admin') { %>
+            <a href="/ListProdAd">Back to Products</a>
+            <% } else { %>
+            <a href="/ListProd">Back to Products</a>
+            <% } %>
+            <a href="/Log-out">Logout</a>
+        </div>
     </div>
     <h1>My Devices</h1>
-    <table>
+    <table class="product-table">
         <tr>
             <th>ID</th>
-            <th>name</th>
+            <th>Name</th>
             <th>Amount</th>
             <th>Picked Date</th>
             <th>Return Back Date</th>
@@ -101,12 +138,12 @@
                 <td><%= order.product_name %></td>
                 <td><%= order.amount %></td>
                 <td><%= order.startDate ? order.startDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
-                <td ><%= order.endDate ? order.endDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
+                <td><%= order.endDate ? order.endDate.toLocaleString('en-US', { day: 'numeric', month: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }) : 'N/A' %></td>
 
                 <td>
                     <form action="/Release" method="POST">
                         <input type="hidden" name="productId" value="<%= order.product_id %>">
-                        <input type="submit" value="Return Back">
+                        <input type="submit" value="Return Back" class="return-button">
                     </form>
                 </td>
             </tr>
