--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -5,66 +5,107 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
         body {
-            font-size: 20px;
+            font-size: 18px;
             background-image: url("images/r.png");
             background-size: cover;
         }
         .pending-table {
-            background-color: #f5f5f5;
+            width: 100%;
+        }
+
+        .pending-table th {
+            background-color: #070707;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .pending-table td {
+            padding: 4px;
+            text-align: center;
+            vertical-align: middle;
+            font-size: 16px;
+            font-weight: bold;
         }
         .accepted-table {
-            background-color: #c3e6cb;
+            width: 100%;
         }
+        .accepted-table th {
+            background-color: #28d361;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .accepted-table td {
+            padding: 4px;
+            text-align: center;
+            vertical-align: middle;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
         .declined-table {
-            background-color: #f8d7da;
+            width: 100%;
         }
+
+        .declined-table th {
+            background-color: #ef4649;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .declined-table td {
+            padding: 4px;
+            text-align: center;
+            vertical-align: middle;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
         .navbar {
-            background-color: #333333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 10px;
+            width: 100%;
         }
+
         .navbar a {
-            color: white;
+            margin: 0 10px;
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
         }
-        .navbar a.logout {
-            margin-left: auto;
+
+        .navbar a:hover {
+            color: #555;
+        }
+        h2 {
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Logo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/profile">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/mydevices">My Devices</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/orders">Orders</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Addproduct.html">Add Product</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/ListProdAd">Products</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link logout" href="/Log-out">Logout</a>
-                </li>
-            </ul>
+    <div class="navbar">
+        <a class="navbar-brand" href="/profile" style="color: red !important; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);font-weight: bold !important; font-size: 30px !important; ">Warehouse</a>
+        <div>
+            <a href="/profile">Profile</a>
+            <a href="/mydevices">My Devices</a>
+            <a href="/orders">Orders</a>
+            <a href="/Addproduct.html">Add Product</a>
+            <a href="/Log-out">Logout</a>
         </div>
-    </nav>
-
+    </div>
+    <br>
     
     <div class="container">
         <h2>Pending Lecturers Orders</h2>
+        <br>
         <table class="table table-bordered pending-table">
             <thead>
                 <tr>
@@ -102,8 +143,9 @@
                     <% }); %>
                 </tbody>
         </table>
-
+        <br>
         <h2>Pending Students Orders</h2>
+        <br>
         <table class="table table-bordered pending-table">
             <thead>
                 <tr>
@@ -141,8 +183,9 @@
                     <% }); %>
                 </tbody>
         </table>
-            
+        <br>    
         <h2>Accepted Orders</h2>
+        <br>
         <table class="table table-bordered accepted-table">
             <thead>
                 <tr>
@@ -176,8 +219,9 @@
                 <% }); %>
             </tbody>
         </table>
-            
+        <br>    
         <h2>Declined Orders</h2>
+        <br>
         <table class="table table-bordered declined-table">
             <thead>
                 <tr>
