--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -160,28 +160,34 @@
               <tr>
                 <th>Day</th>
                 <th>Hours</th>
+                <th>Room</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>Sunday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
               <tr>
                 <td>Monday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
               <tr>
                 <td>Tuesday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
               <tr>
                 <td>Saturday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
               <tr>
                 <td>Thursday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
             </tbody>
           </table>
