--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -150,28 +150,34 @@
               <tr>
                 <th>Day</th>
                 <th>Hours</th>
+                <th>Room</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>Sunday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
               <tr>
                 <td>Monday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 100</td>
               </tr>
               <tr>
                 <td>Tuesday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 301</td>
               </tr>
               <tr>
                 <td>Saturday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 204</td>
               </tr>
               <tr>
                 <td>Thursday</td>
                 <td>08:00-12:00</td>
+                <td>לגסי 101</td>
               </tr>
             </tbody>
           </table>
