--- a/views/Addproduct.html
+++ b/views/Addproduct.html
@@ -70,6 +70,7 @@
       <h1><i> Add Product </i></h1>
       <form action="/AddProduct" method="POST">
         <input name="Id" type="number" placeholder="Id" />
+        <input name="Category" type="text" placeholder="Category" />
         <!---<input name="Name" type="text" placeholder="Name"  />-->
         <input name="Name" type="text" list="options" placeholder="Name" />
         <input
