--- a/views/ListProd.ejs
+++ b/views/ListProd.ejs
@@ -96,9 +96,25 @@
             font-weight: bold;
         }
 
+        .product-Category {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
         .available-amount {
             font-size: 18px;
             font-weight: bold;
+        }
+
+        .search-bar {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 20px;
+        }
+
+        .search-input {
+            width: 200px;
+            padding: 5px;
         }
     </style>
 </head>
@@ -132,14 +148,18 @@
                     <a class="nav-link logout" href="/Log-out">Logout</a>
                 </li>
             </ul>
-        </div>
+        </div>  
     </nav>
 
     <div class="container">
+        <div class="search-bar">
+            <input type="text" id="search-input" class="form-control search-input" placeholder="Search Category / Name ">
+        </div>
         <h1 class="page-title">Available Products</h1>
         <table class="table table-striped table-bordered product-table">
             <thead class="thead-dark">
                 <tr>
+                    <th>Category</th>
                     <th>Name</th>
                     <th>Available</th>
                     <th style="width: 200px;">Action</th>
@@ -148,6 +168,7 @@
             <tbody>
                 <% products.forEach(function(product) { %>
                 <tr>
+                    <td class="product-Category"><%= product.Category %></td>
                     <td class="product-name"><%= product.Name %></td>
                     <td class="available-amount"><%= product.availableAmount %> / <%= product.totalAmount %></td>
                     <td>
@@ -167,6 +188,25 @@
             </tbody>
         </table>
     </div>
+
+    <script>
+        const searchInput = document.getElementById('search-input');
+        const rows = document.querySelectorAll('.product-table tbody tr');
+
+        searchInput.addEventListener('input', function () {
+            const searchText = searchInput.value.toLowerCase();
+
+            rows.forEach(function (row) {
+                const productName = row.querySelector('.product-name').textContent.toLowerCase();
+                const productCategory = row.querySelector('.product-Category').textContent.toLowerCase();
+                if (productName.includes(searchText) || productCategory.includes(searchText)) {
+                    row.style.display = '';
+                } else {
+                    row.style.display = 'none';
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
