--- a/views/ListProdAd.ejs
+++ b/views/ListProdAd.ejs
@@ -106,6 +106,11 @@
             font-weight: bold;
         }
 
+        .product-Category {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
         .available-amount {
             font-size: 18px;
             font-weight: bold;
@@ -126,12 +131,14 @@
     <h1>All Devices</h1>
     <table class="product-table">
         <tr>
+            <th>Category</th>
             <th>Name</th>
             <th>Available</th>
             <th>Action</th>
         </tr>
         <% products.forEach(function(product) { %>
             <tr>
+                <td class="product-Category"><%= product.Category %></td>
                 <td class="product-name"><%= product.Name %></td>
                 <td class="available-amount"><%= product.availableAmount %> / <%= product.totalAmount %></td>
                 <td>
