--- a/views/ListProd.ejs
+++ b/views/ListProd.ejs
@@ -107,14 +107,31 @@
         }
 
         .search-bar {
+            margin-top: 20px;
+            width: 100%;
             display: flex;
-            justify-content: flex-end;
-            margin-bottom: 20px;
+            align-items: center;
+            justify-content: center;
         }
 
         .search-input {
-            width: 200px;
-            padding: 5px;
+            padding: 8px;
+            border: none;
+            border-radius: 4px 0 0 4px;
+            width: 70%;
+        }
+
+        .search-button {
+            padding: 8px 16px;
+            background-color: #4caf50;
+            border: none;
+            color: #fff;
+            border-radius: 0 4px 4px 0;
+            cursor: pointer;
+        }
+
+        .search-button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -141,10 +158,17 @@
     </nav>
 
     <div class="container">
-        <div class="search-bar">
-            <input type="text" id="search-input" class="form-control search-input" placeholder="Search Category / Name ">
-        </div>
         <h1 class="page-title">Available Products</h1>
+        <div class="search-bar">
+            <div class="input-group">
+                <input type="text" id="search-input" class="form-control search-input" placeholder="Search Category / Name">
+                <div class="input-group-append">
+                    <button class="btn btn-success search-button" type="button">Search</button>
+                </div>
+            </div>
+        </div>
+        
+        
         <table class="table table-striped table-bordered product-table">
             <thead class="thead-dark">
                 <tr>
@@ -178,6 +202,7 @@
         </table>
     </div>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         const searchInput = document.getElementById('search-input');
         const rows = document.querySelectorAll('.product-table tbody tr');
